# wut

./: .clang-format  .editorconfig  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  CNAME  CTR_8h.html  CTR_8h__dep__incl.map  CTR_8h__dep__incl.md5  CTR_8h__incl.map  CTR_8h__incl.md5  CTR_8h_source.html  CacheManager_8h.html  CacheManager_8h__dep__incl.map  CacheManager_8h__dep__incl.md5  CacheManager_8h__incl.map  CacheManager_8h__incl.md5  CacheManager_8h_source.html  Cafe_8h.html  Cafe_8h__dep__incl.map  Cafe_8h__dep__incl.md5  Cafe_8h__incl.map  Cafe_8h__incl.md5  Cafe_8h_source.html  Condition_8h.html  Condition_8h__dep__incl.map  Condition_8h__dep__incl.md5  Condition_8h__incl.map  Condition_8h__incl.md5  Condition_8h_source.html  DataCreator_8h.html  DataCreator_8h__dep__incl.map  DataCreator_8h__dep__incl.md5  DataCreator_8h__incl.map  DataCreator_8h__incl.md5  DataCreator_8h_source.html  DrcManager_8h.html  DrcManager_8h__dep__incl.map  (+4216 more)
cafe/: CMakeLists.txt  avm.def  camera.def  coreinit.def  dc.def  dmae.def  drmapp.def  erreula.def  gx2.def  h264.def  lzma920.def  mic.def  nfc.def  nio_prof.def  nlibcurl.def  nlibnss.def  nlibnss2.def  nn_ac.def  nn_acp.def  nn_act.def  nn_aoc.def  nn_boss.def  nn_ccr.def  nn_cmpt.def  nn_dlp.def  nn_ec.def  nn_fp.def  nn_hai.def  nn_hpad.def  nn_idbe.def  nn_ndm.def  nn_nets2.def  nn_nfp.def  nn_nim.def  nn_olv.def  nn_pdm.def  nn_save.def  nn_sl.def  nn_spm.def  nn_temp.def  (+27 more)
cafe/coreinit/: exports.def
cafe/gx2/: exports.def
cafe/nn_ac/: exports.def
cafe/nsysnet/: exports.def
cafe/proc_ui/: exports.def
cafe/sndcore2/: exports.def
cafe/sysapp/: exports.def
cafe/vpad/: exports.def
docs/: CMakeLists.txt  Doxyfile  coreinit_exports.txt  coreinit_unimpl.txt  gx2_exports.txt  gx2_unimpl.txt  mainpage.dox
libraries/: CMakeLists.txt
libraries/libdefaultheap/: CMakeLists.txt
libraries/libgfd/: CMakeLists.txt
libraries/libwhb/: CMakeLists.txt
libraries/nn_erreula/: nn_erreula.cpp
libraries/nn_idb/: IDBReader.cpp
libraries/nn_sl/: IAccountInfoAccessor.cpp  IBlackListAccessor.cpp  IDefaultTitleAccessor.cpp  IDiscCachedTitleAccessor.cpp  IIconInfoAccessor.cpp  IInstalledTitleListAccessor.cpp  IKillerNotificationAccessor.cpp  ILaunchedTitleListAccessor.cpp  IMetaInfoAccessor.cpp  IPreferentialTitleAccessor.cpp  ISerializer.cpp  ISettingAccessor.cpp  IStream.cpp  ITimeAccessor.cpp  ITitleIconCache.cpp  ITitleListAccessor.cpp  ITransferrer.cpp  IUpdatePackageAccessor.cpp  IWhiteListAccessor.cpp  KillerNotificationTransferRecordManager.cpp  KillerNotificationTransferRecordStream.cpp  TitleListCache.cpp
libraries/nn_swkbd/: CMakeLists.txt  nn_swkbd.cpp
libraries/wutcrt/: CMakeLists.txt  crt0_rpl.s  crt0_rpx.s  wut_crt.c  wut_preinit.c
libraries/wutdefaultheap/: wut_defaultheap.c
libraries/wutdevoptab/: CMakeLists.txt  MutexWrapper.h  devoptab_fs.c  devoptab_fs.h  devoptab_fs_chdir.c  devoptab_fs_chmod.c  devoptab_fs_close.c  devoptab_fs_dirclose.c  devoptab_fs_dirnext.c  devoptab_fs_diropen.c  devoptab_fs_dirreset.c  devoptab_fs_fchmod.c  devoptab_fs_fstat.c  devoptab_fs_fsync.c  devoptab_fs_getmtime.c  devoptab_fs_link.c  devoptab_fs_mkdir.c  devoptab_fs_open.c  devoptab_fs_read.c  devoptab_fs_rename.c  devoptab_fs_rmdir.c  devoptab_fs_seek.c  devoptab_fs_stat.c  devoptab_fs_statvfs.c  devoptab_fs_truncate.c  devoptab_fs_unlink.c  devoptab_fs_utils.c  devoptab_fs_utimes.c  devoptab_fs_write.c  devoptab_fsa.cpp  devoptab_fsa.h  devoptab_fsa_chdir.cpp  devoptab_fsa_chmod.cpp  devoptab_fsa_close.cpp  devoptab_fsa_dirclose.cpp  devoptab_fsa_dirnext.cpp  devoptab_fsa_diropen.cpp  devoptab_fsa_dirreset.cpp  devoptab_fsa_fchmod.cpp  devoptab_fsa_fstat.cpp  (+15 more)
libraries/wutdevoptab_sd/: CMakeLists.txt  devoptab_fs_utils.c  devoptab_sd.c  devoptab_sd.h  devoptab_sd_chdir.c  devoptab_sd_chmod.c  devoptab_sd_close.c  devoptab_sd_dirclose.c  devoptab_sd_dirnext.c  devoptab_sd_diropen.c  devoptab_sd_dirreset.c  devoptab_sd_fchmod.c  devoptab_sd_fstat.c  devoptab_sd_fsync.c  devoptab_sd_getmtime.c  devoptab_sd_link.c  devoptab_sd_mkdir.c  devoptab_sd_open.c  devoptab_sd_read.c  devoptab_sd_rename.c  devoptab_sd_rmdir.c  devoptab_sd_seek.c  devoptab_sd_stat.c  devoptab_sd_statvfs.c  devoptab_sd_truncate.c  devoptab_sd_unlink.c  devoptab_sd_utils.c  devoptab_sd_write.c
libraries/wutmalloc/: CMakeLists.txt  wut_malloc.c  wut_malloc_rpl.c
libraries/wutnewlib/: CMakeLists.txt  crt0.s  sleep.c  syscalls.c  wut_clock.c  wut_clock.h  wut_gettod_r.c  wut_lock.c  wut_malloc.c  wut_malloc_lock.c  wut_nanosleep.c  wut_newlib.c  wut_newlib.h  wut_reent.c  wut_sbrk.c  wut_thread.c  wut_thread_specific.c  wut_thread_specific.h
libraries/wutromfs/: romfs_dev.c
libraries/wutsocket/: NSSLCreateConnection.c  accept.c  addrinfo.c  bind.c  connect.c  fcntl.c  getpeername.c  getsockname.c  getsockopt.c  host.c  hostid.c  inet_addr.c  inet_ntop.c  inet_pton.c  ioctl.c  listen.c  poll.c  recv.c  recvfrom.c  select.c  send.c  sendto.c  setsockopt.c  shutdown.c  sockatmark.c  socket.c  somemopt.c  stubs.c  wut_socket.c  wut_socket.h  wut_socket_close.c  wut_socket_common.c  wut_socket_open.c  wut_socket_read.c  wut_socket_write.c
libraries/wutstdc++/: CMakeLists.txt  condition_variable.cc  future.cc  gthread.cc  gthread_cond.cc  gthread_keys.cc  gthread_mutex.cc  gthread_once.cc  gthread_recursive_mutex.cc  shared_ptr.cc  thread.cc  wut_gthread.cc  wut_gthread.cpp  wut_gthread.h  wut_gthread_cond.cc  wut_gthread_cond.cpp  wut_gthread_keys.cc  wut_gthread_keys.cpp  wut_gthread_mutex.cpp  wut_gthread_once.cc  wut_gthread_once.cpp  wut_gthread_recursive_mutex.cc  wut_gthread_recursive_mutex.cpp  wut_gthread_thread.cc  wut_gthread_thread.cpp  wut_stdcpp.cpp  wut_stdcpp_personality.s
rpl/: CMakeLists.txt  Makefile
rpl/common/: lib.c  rules.mk  stub.S
rpl/coreinit/: exports.h
rpl/gx2/: exports.h
rpl/libcoreinit/: config.h  exports.h  fs_dev.c
rpl/libgx2/: config.h  exports.h
rpl/libnsysnet/: exports.h
rpl/nn_ac/: config.h  (+1 more)
samples/: CMakeLists.txt
tests/: CMakeLists.txt
tools/: CMakeLists.txt  Makefile  tools.sln
(+787 files in other folders)
