cmake_minimum_required(VERSION 3.2)
project(cafe C CXX)
enable_language(ASM)

macro(add_cafe_library target)
   add_custom_command(
      OUTPUT ${target}.s
      COMMAND ${WUT_RPLIMPORTGEN} ${CMAKE_CURRENT_SOURCE_DIR}/${target}.def ${target}.s
      DEPENDS ${target}.def)

   add_library(${target} STATIC ${target}.s)
   install(TARGETS ${target} ARCHIVE DESTINATION "${CMAKE_INSTALL_PREFIX}/lib")
endmacro()

add_cafe_library(avm)
add_cafe_library(camera)
add_cafe_library(coreinit)
add_cafe_library(dc)
add_cafe_library(dmae)
add_cafe_library(drmapp)
add_cafe_library(erreula)
add_cafe_library(gx2)
add_cafe_library(h264)
add_cafe_library(lzma920)
add_cafe_library(mic)
add_cafe_library(nfc)
add_cafe_library(nio_prof)
add_cafe_library(nlibcurl)
add_cafe_library(nlibnss)
add_cafe_library(nlibnss2)
add_cafe_library(nn_ac)
add_cafe_library(nn_acp)
add_cafe_library(nn_act)
add_cafe_library(nn_aoc)
add_cafe_library(nn_boss)
add_cafe_library(nn_ccr)
add_cafe_library(nn_cmpt)
add_cafe_library(nn_dlp)
add_cafe_library(nn_ec)
add_cafe_library(nn_fp)
add_cafe_library(nn_hai)
add_cafe_library(nn_hpad)
add_cafe_library(nn_idbe)
add_cafe_library(nn_ndm)
add_cafe_library(nn_nets2)
add_cafe_library(nn_nfp)
add_cafe_library(nn_nim)
add_cafe_library(nn_olv)
add_cafe_library(nn_pdm)
add_cafe_library(nn_save)
add_cafe_library(nn_sl)
add_cafe_library(nn_spm)
add_cafe_library(nn_temp)
add_cafe_library(nn_uds)
add_cafe_library(nn_vctl)
add_cafe_library(nsysccr)
add_cafe_library(nsyshid)
add_cafe_library(nsyskbd)
add_cafe_library(nsysnet)
add_cafe_library(nsysuhs)
add_cafe_library(nsysuvd)
add_cafe_library(ntag)
add_cafe_library(padscore)
add_cafe_library(proc_ui)
add_cafe_library(snd_core)
add_cafe_library(snd_user)
add_cafe_library(sndcore2)
add_cafe_library(snduser2)
add_cafe_library(swkbd)
add_cafe_library(sysapp)
add_cafe_library(tcl)
add_cafe_library(tve)
add_cafe_library(uac)
add_cafe_library(uac_rpl)
add_cafe_library(usb_mic)
add_cafe_library(uvc)
add_cafe_library(uvd)
add_cafe_library(vpad)
add_cafe_library(vpadbase)
add_cafe_library(zlib125)
