cmake_minimum_required(VERSION 3.9)
find_package(Doxygen)

if(DOXYGEN_FOUND)
   set(DOXYGEN_IN ${CMAKE_CURRENT_SOURCE_DIR}/../docs/Doxyfile.in)
   set(DOXYGEN_OUT ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile)

   set(DOXYGEN_PROJECT_NAME "wut")
   set(DOXYGEN_PROJECT_NUMBER "1.3.0")
   set(DOXYGEN_PROJECT_BRIEF "Wii U Toolchain")

   set(DOXYGEN_GENERATE_HTML YES)
   set(DOXYGEN_GENERATE_LATEX NO)

   set(DOXYGEN_TAB_SIZE 3)
   set(DOXYGEN_OPTIMIZE_OUTPUT_FOR_C YES)
   set(DOXYGEN_INLINE_SIMPLE_STRUCTS YES)
   set(DOXYGEN_EXTRACT_ALL YES)
   set(DOXYGEN_EXTRACT_STATIC YES)
   set(DOXYGEN_HIDE_SCOPE_NAMES YES)
   set(DOXYGEN_SORT_MEMBER_DOCS NO)
   set(DOXYGEN_RECURSIVE YES)
   set(DOXYGEN_EXCLUDE_PATTERNS
      "wut_structsize.h")
   set(DOXYGEN_EXCLUDE_SYMBOLS
      "WUT_CHECK_OFFSET"
      "WUT_CHECK_SIZE"
      "WUT_PADDING_BYTES"
      "WUT_UNKNOWN_BYTES"
      "WUT_UNKNOWN_SIZE")
   set(DOXYGEN_SOURCE_BROWSER YES)
   set(DOXYGEN_JAVADOC_AUTOBRIEF YES)
   set(DOXYGEN_ENUM_VALUES_PER_LINE 1)
   set(DOXYGEN_CLASS_DIAGRAMS NO)
   set(DOXYGEN_COLLABORATION_GRAPH NO)
   set(DOXYGEN_PREDEFINED "__cplusplus")

   doxygen_add_docs(docs
      "${CMAKE_CURRENT_SOURCE_DIR}/../include"
      "${CMAKE_CURRENT_SOURCE_DIR}/../docs")
endif()
