cmake_minimum_required(VERSION 3.9)
find_package(Doxygen)

if(DOXYGEN_FOUND)
   set(DOXYGEN_IN ${CMAKE_CURRENT_SOURCE_DIR}/../docs/Doxyfile.in)
   set(DOXYGEN_OUT ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile)

   set(DOXYGEN_PROJECT_NAME "wut")
   set(DOXYGEN_PROJECT_NUMBER $ENV{WUT_VERSION})
   set(DOXYGEN_PROJECT_BRIEF "Wii U Toolchain")

   set(DOXYGEN_GENERATE_HTML YES)
   set(DOXYGEN_GENERATE_LATEX NO)

   set(DOXYGEN_TAB_SIZE 3)
   set(DOXYGEN_OPTIMIZE_OUTPUT_FOR_C YES)
   set(DOXYGEN_INLINE_SIMPLE_STRUCTS YES)
   set(DOXYGEN_EXTRACT_ALL YES)
   set(DOXYGEN_EXTRACT_STATIC YES)
   set(DOXYGEN_HIDE_SCOPE_NAMES YES)
   set(DOXYGEN_SORT_MEMBER_DOCS NO)
   set(DOXYGEN_RECURSIVE YES)
   set(DOXYGEN_EXCLUDE_PATTERNS
      "wut_structsize.h")
   set(DOXYGEN_SOURCE_BROWSER YES)
   set(DOXYGEN_JAVADOC_AUTOBRIEF YES)
   set(DOXYGEN_ENUM_VALUES_PER_LINE 1)
   set(DOXYGEN_CLASS_DIAGRAMS NO)
   set(DOXYGEN_COLLABORATION_GRAPH NO)
   set(DOXYGEN_ENABLE_PREPROCESSING YES)
   set(DOXYGEN_MACRO_EXPANSION YES)
   set(DOXYGEN_EXPAND_ONLY_PREDEF YES)
   set(DOXYGEN_PREDEFINED
      "__cplusplus;"
      "WUT_PACKED=;"
      "WUT_ALIGNAS(x)=;"
      "WUT_CHECK_OFFSET(Type,Offset,Field)=;"
      "WUT_CHECK_SIZE(Type,Size)=;"
      "WUT_PADDING_BYTES(Size)=;"
      "WUT_UNKNOWN_BYTES(Size)=;"
      "WUT_UNKNOWN_SIZE(x)=;")

   doxygen_add_docs(docs
      "${CMAKE_CURRENT_SOURCE_DIR}/../include"
      "${CMAKE_CURRENT_SOURCE_DIR}/../docs")
endif()
